--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-stack",
   "version": "0.1.0",
-  "homepage": "https://yourusername.github.io/WordStack/",
+  "homepage": "https://lenaanohina.github.io/WordStack/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
